[package]
name = "perseus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.1", default-features = false, features = [
    "glow",        # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
egui = "0.24.1"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
